# AgenticAI_CrewAI

./: README.md  crew.py  crewAI_documentation  main.py  metadata.json  pyproject.toml  requirements.txt
config/: agents.yaml  tasks.yaml  tools.yaml
dashboard/: app.py
tools/: __init__.py  download_tool.py  fetch_tool.py  huggingface_tool.py  transcribe_tool.py
transcripts/: 93912843_0.txt  93912843_1.txt
