[project]
name = "sample"
version = "0.1.0"
description = "Sample using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
sample = "sample.main:run"
run_crew = "sample.main:run"
train = "sample.main:train"
replay = "sample.main:replay"
test = "sample.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
